2011-02-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-rfn-eshadow-setup-minibuffer): Do not use
	`field' property of `rfn-eshadow-overlay'.

2011-02-13  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in: Remove tramp-imap.el.

	* tramp.el (tramp-read-passwd): Simplify `auth-source-search' call.

	* tramp-imap.el: Remove file.

2011-02-13  Teodor Zlatanov  <tzz@lifelogs.com>

	* tramp.el (tramp-default-method): Also check if
	`auth-source-search' is bound.
	(tramp-read-passwd): Use `auth-source-search' instead of
	`auto-source-user-or-password'.

2011-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-errors): Use `regexp-opt'.  Add
	"NT_STATUS_IO_TIMEOUT" and "NT_STATUS_NO_SUCH_USER".

2011-02-03  Era Eriksson  <era+tramp@iki.fi>  (tiny change)

	* tramp.el (tramp-postfix-method-format)
	(tramp-postfix-method-regexp, tramp-prefix-domain-format)
	(tramp-prefix-domain-regexp, tramp-postfix-user-format)
	(tramp-postfix-user-regexp, tramp-prefix-port-format)
	(tramp-prefix-port-regexp, tramp-postfix-host-format)
	(tramp-postfix-host-regexp, tramp-handle-substitute-in-file-name):
	Doc fix.

2011-02-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-remote-path): Add default settings for
	`tramp-default-remote-path' to the docstring.
	(tramp-get-remote-path): Suppress error message when `getconf
	PATH' fails.

	* tramp-smb.el (tramp-smb-errors): Add "NT_STATUS_UNSUCCESSFUL".

2011-01-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method): Initialize with pscp/plink only
	when running under W32.
	(tramp-debug-message): Extend function exclude list.  Use `regexp-opt'.

	* tramp-sh.el (tramp-find-inline-compress)
	(tramp-get-inline-coding): Quote command after pipe symbol for
	local calls under W32.  (Bug#6784)

2010-12-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-methods): Add recursive options to "scpc" and
	"scpx".
